--- a/dev.ipynb
+++ b/dev.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "0c24a7dc",
+   "id": "a7f61af7",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -13,27 +13,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
-   "id": "66e03dcf",
+   "execution_count": 78,
+   "id": "91504d0c",
    "metadata": {},
    "outputs": [],
    "source": [
-    "a = np.array([1,2,3,4,5])"
+    "a = np.array([1,1,2,2,3,3,3,3,3])"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
-   "id": "b50b6458",
+   "execution_count": 29,
+   "id": "428f8eb1",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "4"
+       "3"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 29,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -46,56 +46,56 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
-   "id": "6100d333",
-   "metadata": {},
-   "outputs": [
-    {
-     "ename": "ValueError",
-     "evalue": "too many values to unpack (expected 2)",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mValueError\u001b[0m                                Traceback (most recent call last)",
-      "\u001b[1;32m<ipython-input-10-cda6d23f886f>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[1;32m----> 1\u001b[1;33m \u001b[1;32mfor\u001b[0m \u001b[0mi\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mj\u001b[0m \u001b[1;32min\u001b[0m \u001b[0mn_classes\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mcounts\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m      2\u001b[0m     \u001b[0mprint\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mi\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mj\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
-      "\u001b[1;31mValueError\u001b[0m: too many values to unpack (expected 2)"
-     ]
-    }
-   ],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 11,
-   "id": "e7df0c22",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "def Gini_impurity(rows):\n",
-    "    \"\"\"calculates gini impurity for a single group, 0 is perfectly homogenous, 1 is \n",
-    "    \"\"\"\n",
-    "    gini = 0\n",
-    "    n_classes, counts = np.unique(rows, return_counts=True)\n",
-    "    for i in range(len(counts)):\n",
-    "        p = counts[i]/counts.sum()\n",
-    "        gini += p * (1-p)\n",
-    "    return gini\n",
-    "    "
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 16,
-   "id": "24bf2c0d",
+   "execution_count": 59,
+   "id": "8308700c",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "0.8000000000000002"
+       "254"
       ]
      },
-     "execution_count": 16,
+     "execution_count": 59,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "len(str(i))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 30,
+   "id": "14d04496",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def Gini_impurity(rows):\n",
+    "    \"\"\"calculates gini impurity for a single group, 0 is perfectly homogenous (pure)\n",
+    "    \"\"\"\n",
+    "    gini = 1\n",
+    "    n_classes, counts = np.unique(rows, return_counts=True)\n",
+    "    for i in range(len(counts)):\n",
+    "        p = counts[i]/counts.sum()\n",
+    "        gini -= p * p\n",
+    "    return gini  "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 79,
+   "id": "8c4718fe",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.40740740740740744"
+      ]
+     },
+     "execution_count": 79,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -107,10 +107,12 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "952f4737",
+   "id": "21ea047e",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "def Gi_split()"
+   ]
   }
  ],
  "metadata": {
